# AG-Foundational-Model

./: .gitattributes  .gitignore  Dataset.yml  README.md  environment.yml  project_description.md  pyproject.toml  requirements.txt
catalogs/: pretraining_seedlings_catalog.csv  pretraining_seedlings_subset.csv
configs/: demo_dino.yaml  demo_mim.yaml  pretraining_dino_smoke.yaml  pretraining_full.yaml  pretraining_seedlings_smoke.yaml  smoke_test.yaml  smoke_test_b.yaml  smoke_test_s.yaml  train_dino.example.yaml  train_mim.example.yaml  wds_dino_pretrain.yaml  wds_mim_pretrain.yaml
cvpr/: main.tex  paper_outline.md
data/: README.md
docs/: README.md  architecture.md  configuration.md  data-formats.md  dataset-strategy.md  experiment-tracking.md  implementation-map.md  pretraining_implementation_plan.md  reproducibility.md  research-roadmap 2.md  research-roadmap.md  runbook.md  setup.md  testing.md  training.md  troubleshooting.md
reports/: LastName_LastName_Proposal.aux  LastName_LastName_Proposal.fdb_latexmk  LastName_LastName_Proposal.fls  LastName_LastName_Proposal.out  LastName_LastName_Proposal.tex  cvpr.sty
scratch/: analyze_shards.py
scripts/: ag_foundation.py  analyze_pretraining_dataset.py  build_pretraining_catalog.py  common.sh  create_catalog.py  prepare_catalog.py  slice_geotiffs.py  train_dino.ps1  train_dino.py  train_dino.sh  train_mim.ps1  train_mim.py  train_mim.sh  update_dino_runner.py  update_dino_trainer.py  windows_common.ps1
tests/: conftest.py  test_build_wds_shards.py  test_cli.py  test_dali_wds.py  test_data_loading.py  (+10 more)
(+41 files in other folders)
