[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ag-foundation"
version = "0.1.0"
description = "Agricultural ViT foundation-model pretraining with MIM, DINO, GeoTIFF, and multispectral support."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.26,<2",
  "pandas>=2.2",
  "Pillow>=10.0",
  "PyYAML>=6.0",
]

[project.scripts]
ag-foundation = "ag_foundation.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.11,<1",
]
ml = [
  "matplotlib>=3.8,<4",
  "rasterio>=1.3,<1.6",
  "timm>=1.0,<2",
  "torch>=2.2,<3",
  "torchvision>=0.17,<1",
]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
